--- a/index.html
+++ b/index.html
@@ -7,10 +7,79 @@
     <title>Main Page</title>
 </head>
 <body>
-    <div>
-        Hi
-        
+    <div class="card py-2" style="border-color:black; background-color:whitesmoke;" >
+        <div class="container my-1">
+            <img src="qs-logo-header.png" style="max-width:10%; max-height:10%;">
+        </div>
     </div>
+    <div class="card" style="border-color:black; background-color:whitesmoke;" >
+        <div class="container my-3">
+            <button type="button" class="btn btn-dark">
+                <div class="container text-center mx-2">
+                    <div class="row">
+                      <div class="col-3">
+                        <i class="fa-solid fa-list"></i>
+                      </div>
+                      <div class="col-9">
+                        Choose Bots
+                      </div>
+                    </div>
+                  </div>
+            </button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="row">
+            <div class="col-4">
+                <div class="card ms-2 my-2" style="border-color:black;" >
+                    <div class="card-body text-center">
+                        <h1>QS BOTS</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="col-8">
+                <div class="card my-2 me-2" style="border-color:black;" >
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Bot Status:</li>
+                        <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="card ms-2 my-2" style="border-color:black;" >
+                                        Bot #1
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="card ms-2 my-2" style="border-color:black;" >Bot #2</div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="card ms-2 my-2" style="border-color:black;" >Bot #3</div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="card ms-2 my-2" style="border-color:black;" >Bot #4</div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="card ms-2 my-2" style="border-color:black;" >Bot #5</div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="card ms-2 my-2" style="border-color:black;" >Bot #6</div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card py-2" style="border-color:black; background-color:whitesmoke;" >
+        <div class="container my-4">
+            
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/031ad05086.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script></body>
 </html>
