--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <div class="col-4">
                 <div class="card ms-2 my-2" style="border-color:black;" >
                     <div class="card-body text-center">
-                        <h1>QS BOTS</h1>
+                        <h1><strong>QS BOTS</strong></h1>
+                        <p>This website contains all the information on Qs's bots.</p>
                     </div>
                 </div>
             </div>
