--- a/index.html
+++ b/index.html
@@ -4,28 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Main Page</title>
 </head>
 <body>
     <div class="card py-2" style="border-color:black; background-color:whitesmoke;" >
-        <div class="container my-1">
-            <img src="qs-logo-header.png" style="max-width:10%; max-height:10%;">
+        <div class=" my-1 mx-2">
+            <img src="qs-logo-header.png" style="max-width:4%; max-height:6%;">
         </div>
     </div>
     <div class="card" style="border-color:black; background-color:whitesmoke;" >
-        <div class="container my-3">
-            <button type="button" class="btn btn-dark">
-                <div class="container text-center mx-2">
-                    <div class="row">
-                      <div class="col-3">
-                        <i class="fa-solid fa-list"></i>
-                      </div>
-                      <div class="col-9">
-                        Choose Bots
-                      </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="container my-3 ms-1">
+                    <div class="dropdown">
+                        <button class="btn btn-dark align-content-center" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-left: 14rem; padding-right: 13rem;">
+                            <div class="container text-center mx-2">
+                                <div class="row">
+                                    <div class="col-3">
+                                        <i class="fa-solid fa-list"></i>
+                                    </div>
+                                    <div class="col-9">
+                                        Choose Bots
+                                    </div>
+                                </div>
+                            </div>
+                        </button>
+                        <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#" style="padding-left: 14rem; padding-right: 14rem;">Action</a></li>
+                        <li><a class="dropdown-item" href="#" style="padding-left: 14rem; padding-right: 14rem;">Another action</a></li>
+                        <li><a class="dropdown-item" href="#" style="padding-left: 14rem; padding-right: 14rem;">Something else here</a></li>
+                        </ul>
                     </div>
-                  </div>
-            </button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="card">
@@ -33,43 +46,94 @@
             <div class="col-4">
                 <div class="card ms-2 my-2" style="border-color:black;" >
                     <div class="card-body text-center">
-                        <h1><strong>QS BOTS</strong></h1>
-                        <p>This website contains all the information on Qs's bots.</p>
+                        <h1><strong>QS <br> BOTS</strong></h1>
+                        <p>This website contains all the information on QS's bots.</p>
                     </div>
                 </div>
             </div>
             <div class="col-8">
                 <div class="card my-2 me-2" style="border-color:black;" >
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Bot Status:</li>
                         <li class="list-group-item">
                             <div class="row">
-                                <div class="col-6">
-                                    <div class="card ms-2 my-2" style="border-color:black;" >
-                                        Bot #1
+                                <div class="col-4">
+                                Bot Status:
+                                </div>
+                                <div class="col-8">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <div class="row">
+                                                <div class="col-1">
+                                                    <div id="greenBadge" class="redB">
+                                                        <span class="position-absolute p-2 bg-success border border-light rounded-circle">
+                                                            <span class="visually-hidden">New alerts</span>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                                <div class="col-10">
+                                                    Online
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="row">
+                                                <div class="col-1">
+                                                    <div id="redBadge" class="redB">
+                                                        <span class="position-absolute p-2 bg-danger border border-light rounded-circle">
+                                                            <span class="visually-hidden">New alerts</span>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                                <div class="col-10">
+                                                    Offline
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="row">
+                                                <div class="col-1">
+                                                    <div id="blackBadge" class="redB">
+                                                        <span class="position-absolute p-2 bg-dark border border-light rounded-circle">
+                                                            <span class="visually-hidden">New alerts</span>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                                <div class="col-10">
+                                                    Error
+                                                </div>
+                                            </div>
+                                        </div>
+
                                     </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="card ms-2 my-2" style="border-color:black;" >Bot #2</div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="card ms-2 my-2" style="border-color:black;" >Bot #3</div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="card ms-2 my-2" style="border-color:black;" >Bot #4</div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="card ms-2 my-2" style="border-color:black;" >Bot #5</div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="card ms-2 my-2" style="border-color:black;" >Bot #6</div>
                                 </div>
                             </div>
                         </li>
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="card ms-2 my-2" style="border-color:black;" >
+                                    Bot #1
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="card ms-2 my-2" style="border-color:black;" >Bot #2</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="card ms-2 my-2" style="border-color:black;" >Bot #3</div>
+                            </div>
+                            <div class="col-6">
+                                <div class="card ms-2 my-2" style="border-color:black;" >Bot #4</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="card ms-2 my-2" style="border-color:black;" >Bot #5</div>
+                            </div>
+                            <div class="col-6">
+                                <div class="card ms-2 my-2" style="border-color:black;" >Bot #6</div>
+                            </div>
+                        </div>
                     </ul>
                 </div>
             </div>
@@ -77,7 +141,6 @@
     </div>
     <div class="card py-2" style="border-color:black; background-color:whitesmoke;" >
         <div class="container my-4">
-            
         </div>
     </div>
     <script src="bot_navigation.js"></script>
