--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <title>Main Page</title>
 </head>
 <body>
-    <div class="card py-2" style="border-color:black; background-color:whitesmoke;" >
+    <div class="card py-2 cardColor">
         <div class=" my-1 mx-2">
-            <img src="qs-logo-header.png" style="max-width:4%; max-height:6%;">
+            <img src="qs-logo-header.png" class="img-size">
         </div>
     </div>
-    <div class="card" style="border-color:black; background-color:whitesmoke;" >
+    <div class="card cardColor">
         <div class="row">
             <div class="col-4">
                 <div class="container my-3 ms-1">
                     <div class="dropdown">
-                        <button class="btn btn-dark align-content-center" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-left: 14rem; padding-right: 13rem;">
+                        <button class="btn btn-dark align-content-center btnn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <div class="container text-center mx-2">
                                 <div class="row">
                                     <div class="col-3">
@@ -32,9 +32,9 @@
                             </div>
                         </button>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#" style="padding-left: 14rem; padding-right: 14rem;">Action</a></li>
-                        <li><a class="dropdown-item" href="#" style="padding-left: 14rem; padding-right: 14rem;">Another action</a></li>
-                        <li><a class="dropdown-item" href="#" style="padding-left: 14rem; padding-right: 14rem;">Something else here</a></li>
+                        <li><a class="dropdown-item btnn" href="#">Action</a></li>
+                        <li><a class="dropdown-item btnn" href="#">Another action</a></li>
+                        <li><a class="dropdown-item btnn" href="#">Something else here</a></li>
                         </ul>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
     <div class="card">
         <div class="row">
             <div class="col-4">
-                <div class="card ms-2 my-2" style="border-color:black;" >
+                <div class="card ms-2 my-2 borderColor">
                     <div class="card-body text-center">
                         <h1><strong>QS <br> BOTS</strong></h1>
                         <p>This website contains all the information on QS's bots.</p>
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="col-8">
-                <div class="card my-2 me-2" style="border-color:black;" >
+                <div class="card my-2 me-2 borderColor">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
                             <div class="row">
@@ -103,35 +103,34 @@
                                                 </div>
                                             </div>
                                         </div>
-
                                     </div>
                                 </div>
                             </div>
                         </li>
                         <div class="row">
                             <div class="col-6">
-                                <div class="card ms-2 my-2" style="border-color:black;" >
+                                <div class="card ms-2 my-2 borderColor">
                                     Bot #1
                                 </div>
                             </div>
                             <div class="col-6">
-                                <div class="card ms-2 my-2" style="border-color:black;" >Bot #2</div>
+                                <div class="card ms-2 my-2 borderColor">Bot #2</div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-6">
-                                <div class="card ms-2 my-2" style="border-color:black;" >Bot #3</div>
+                                <div class="card ms-2 my-2 borderColor">Bot #3</div>
                             </div>
                             <div class="col-6">
-                                <div class="card ms-2 my-2" style="border-color:black;" >Bot #4</div>
+                                <div class="card ms-2 my-2 borderColor">Bot #4</div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-6">
-                                <div class="card ms-2 my-2" style="border-color:black;" >Bot #5</div>
+                                <div class="card ms-2 my-2 borderColor">Bot #5</div>
                             </div>
                             <div class="col-6">
-                                <div class="card ms-2 my-2" style="border-color:black;" >Bot #6</div>
+                                <div class="card ms-2 my-2 borderColor">Bot #6</div>
                             </div>
                         </div>
                     </ul>
@@ -139,11 +138,12 @@
             </div>
         </div>
     </div>
-    <div class="card py-2" style="border-color:black; background-color:whitesmoke;" >
+    <div class="card py-2 cardColor">
         <div class="container my-4">
         </div>
     </div>
     <script src="bot_navigation.js"></script>
+    <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
     <script src="https://kit.fontawesome.com/031ad05086.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script></body>
