--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> -->
     <title>Main Page</title>
+    <script src="bot_navigation.js"></script>
 </head>
 <body>
     <div class="card py-2 cardColor">
@@ -32,8 +33,8 @@
                             </div>
                         </button>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item btnn" href="#">Action</a></li>
-                        <li><a class="dropdown-item btnn" href="#">Another action</a></li>
+                        <li><a class="dropdown-item btnn" href="#">Pistachio Bot</a></li>
+                        <li><a class="dropdown-item btnn" href="#">Elli Bot</a></li>
                         <li><a class="dropdown-item btnn" href="#">Something else here</a></li>
                         </ul>
                     </div>
@@ -142,7 +143,7 @@
         <div class="container my-4">
         </div>
     </div>
-    <script src="bot_navigation.js"></script>
+    
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
     <script src="https://kit.fontawesome.com/031ad05086.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
