--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
                             </div>
                         </button>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item btnn" href="#">Pistachio Bot</a></li>
-                        <li><a class="dropdown-item btnn" href="#">Elli Bot</a></li>
-                        <li><a class="dropdown-item btnn" href="#">Something else here</a></li>
+                            <form id="messageForm">
+                                <li><button class="dropdown-item btnn" href="#" type="submit">Pistachio Bot</a></li>
+                                <li><button class="dropdown-item btnn" href="#">Elli Bot</a></li>
+                                <li><button class="dropdown-item btnn" href="#">Something else here</a></li>
+                            </form>
                         </ul>
                     </div>
                 </div>
@@ -144,8 +146,10 @@
         </div>
     </div>
     
+    
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
     <script src="https://kit.fontawesome.com/031ad05086.js" crossorigin="anonymous"></script>
+    <script src="bot_navigation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script></body>
 </html>
