Just was adding some testing mainly working on the botpress side today

--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
     </div>
     <div class="card py-2 cardColor">
         <div class="container my-4">
+            <div class="card ms-2 my-2 borderColor">
+            <p>Will be deleted</p>
+            <form id="messageFormTesting">
+                <button class="dropdown-item btnn" href="#" type="submit"><a>Pistachio Bot</a>
+            </form>
+            </div>
         </div>
     </div>
     
