Stop sending payload to database

--- a/junk_code/testingPB.html
+++ b/junk_code/testingPB.html
@@ -215,7 +215,7 @@
     //# sourceMappingURL=inject.js.map
 </script>
 
-<script>
+<!-- <script>
 
     // IMPORTANT: Send a payload to the bot about the found email.
     // let logged_in_email = drupalSettings.user_email_id
@@ -314,7 +314,7 @@
         );
 
 
-</script>
+</script> -->
 
 <!-- 
 <script>
