--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> -->
     <title>Main Page</title>
-    <script src="bot_navigation.js"></script>
+    <!-- <script src="bot_navigation.js"></script> -->
 </head>
 <body>
     <div class="card py-2 cardColor">
@@ -141,7 +141,7 @@
             </div>
         </div>
     </div>
-    <div class="card py-2 cardColor">
+    <!-- <div class="card py-2 cardColor">
         <div class="container my-4">
             <div class="card ms-2 my-2 borderColor">
             <p>Will be deleted</p>
@@ -150,13 +150,13 @@
             </form>
             </div>
         </div>
-    </div>
+    </div> -->
     
     
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
     <script src="https://kit.fontawesome.com/031ad05086.js" crossorigin="anonymous"></script>
-    <script src="bot_navigation.js"></script>
-    <script src="bot_status.js"></script>
+    <!-- <script src="bot_navigation.js"></script> -->
+    <!-- <script src="bot_status.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script></body>
 </html>
