Successfully retrieved all data from the database bot

--- a/junk_code/testingPB.html
+++ b/junk_code/testingPB.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <!-- saved from url=(0104)https://qs.topuniversities.com/qs-student-apply-support?utm_source=toprightCTA&utm_medium=TU&utm_id=QSSA -->
-<html lang="en" class="fontawesome-i2svg-active fontawesome-i2svg-complete"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!-- <html lang="en" class="fontawesome-i2svg-active fontawesome-i2svg-complete"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> -->
 
     
-<head>
+<!-- <head> -->
     <!--style css for chat bubble and red number elements-->
-    <style>
+    <!-- <style>
     .cb {
       margin: 40px;
       display: inline-block;
@@ -60,20 +60,20 @@
         right: 20px;
         bottom: 80px;border-radius: 50%;
     }     */
-    </style>
-</head>
+    </style> -->
+<!-- </head>
 
-<body>
+<body> -->
 
 <!-- <button class="button5">S</button> -->
 
 <!--chat bubble element-->
-<div id="msgDiv" class="cb tri-right btm-right"></div>
+<!-- <div id="msgDiv" class="cb tri-right btm-right"></div> -->
 
 <!--red number dot element-->
-<div id="notificationDiv" class="note"></div>
+<!-- <div id="notificationDiv" class="note"></div> -->
 
-<script>
+<!-- <script>
     let stylesheeturl = 'https://webchat-styler-css.botpress.app/prod/code/a3d7a325-0e12-49a9-85b9-5a012b418e4d/v62893/style.css';
     (() => {
         const e = "bp-web-widget",
@@ -213,9 +213,9 @@
     })();
 
 //     //# sourceMappingURL=inject.js.map
-// </script>
+// </script> -->
 
-<script>
+<!-- <script>
 
     // IMPORTANT: Send a payload to the bot about the found email.
     // let logged_in_email = drupalSettings.user_email_id
@@ -314,7 +314,7 @@
         );
 
 
-</script>
+</script> -->
 
 <!-- 
 <script>
@@ -409,5 +409,5 @@
 
  -->
 
-</body></html>
+<!-- </body></html> -->
 
