Lots of changes including the bot status displayed on the web page as well as other information and Automatic bot refresh

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-10">
-                                                    Online
+                                                    ONLINE
                                                 </div>
                                             </div>
                                         </div>
@@ -82,13 +82,13 @@
                                             <div class="row">
                                                 <div class="col-1">
                                                     <div id="redBadge" class="redB">
-                                                        <span class="position-absolute p-2 bg-danger border border-light rounded-circle">
+                                                        <span class="position-absolute p-2 bg-danger border border-light rounded-circle ">
                                                             <span class="visually-hidden">New alerts</span>
                                                         </span>
                                                     </div>
                                                 </div>
                                                 <div class="col-10">
-                                                    Offline
+                                                    OFFLINE
                                                 </div>
                                             </div>
                                         </div>
@@ -102,7 +102,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-10">
-                                                    Error
+                                                    ERROR
                                                 </div>
                                             </div>
                                         </div>
@@ -113,19 +113,49 @@
                         <div class="row">
                             <div class="col-6">
                                 <div class="card ms-2 my-2 borderColor">
-                                    Bot #1
+                                    <h2>Ellie Bot:</h2>
+                                    <p id="ellie-data">Loading...</p>
+                                    <div id="ellie-status-circle" class="status-circle">
+                                        <span class="position-absolute p-3 bg-success border border-light rounded-circle">
+                                            <span class="visually-hidden">Status Indicator</span>
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-6">
-                                <div class="card ms-2 my-2 borderColor">Bot #2</div>
+                                <div class="card ms-2 my-2 borderColor">
+                                    <h2>Pistachio Bot:</h2>
+                                    <p id="pistachio-data">Loading...</p>
+                                    <div id="pistachio-status-circle" class="status-circle">
+                                        <span class="position-absolute p-3 bg-success border border-light rounded-circle">
+                                            <span class="visually-hidden">Status Indicator</span>
+                                        </span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-6">
-                                <div class="card ms-2 my-2 borderColor">Bot #3</div>
+                                <div class="card ms-2 my-2 borderColor">
+                                    <h2>Study Guide:</h2>
+                                    <p id="study-guide-data">Loading...</p>
+                                    <div id="study-guide-status-circle" class="status-circle">
+                                        <span class="position-absolute p-3 bg-success border border-light rounded-circle">
+                                            <span class="visually-hidden">Status Indicator</span>
+                                        </span>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-6">
-                                <div class="card ms-2 my-2 borderColor">Bot #4</div>
+                                <div class="card ms-2 my-2 borderColor">
+                                    <h2>Destination Guide:</h2>
+                                    <p id="destination-guide-data">Loading...</p>
+                                    <div id="destination-guide-status-circle" class="status-circle">
+                                        <span class="position-absolute p-3 bg-success border border-light rounded-circle">
+                                            <span class="visually-hidden">Status Indicator</span>
+                                        </span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
@@ -143,12 +173,7 @@
     </div>
     <div class="card py-2 cardColor">
         <div class="container my-4">
-            <div class="card ms-2 my-2 borderColor">
-            <p>Will be deleted</p>
-            <form id="messageFormTesting">
-                <button class="dropdown-item btnn" href="#" type="submit"><a>Pistachio Bot</a>
-            </form>
-            </div>
+            
         </div>
     </div>
 
