--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="card py-2 cardColor">
         <div class=" my-1 mx-2">
             <img src="qs-logo-header.png" class="img-size">
+            <button class="settingsButton"><i class='fas fa-cog' style='font-size:36px'></i></i></button>
         </div>
     </div>
     <div class="card cardColor">
