--- a/index.html
+++ b/index.html
@@ -179,9 +179,31 @@
     </div>
 
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+    <script>
+        window.botpressWebChat.init({
+            "composerPlaceholder": "Type here",
+            "botConversationDescription": "your friendly AI counsellor",
+            "botId": "3865d6df-cf99-43a6-ad8c-ba37c8f36695",
+            "hostUrl": "https://cdn.botpress.cloud/webchat/v1",
+            "messagingUrl": "https://messaging.botpress.cloud",
+            "clientId": "3865d6df-cf99-43a6-ad8c-ba37c8f36695",
+            "webhookId": "c68cc92f-d818-4dd2-b2a3-fe308b4695f8",
+            "hideWidget": true,
+            "themeName": "prism",
+            "botName": "Study Guide Bot - v3 UAT",
+            "avatarUrl": "https://cdn-assets-cloud.frontify.com/s3/frontify-cloud-files-us/eyJwYXRoIjoiZnJvbnRpZnlcL2FjY291bnRzXC84MVwvMjA5NzcwXC9wcm9qZWN0c1wvMjg3MDAzXC9hc3NldHNcLzBhXC81MjM2MTI4XC9mZjI1ZTcyZDg4N2RhZWQ3ZDhiMDE4NzJjNGJkOTg2Zi0xNjE0NjI2MTQwLnBuZyJ9:frontify:RdGpiOL_3z3qpPO5DXJfmNUBrcpjs-LLBgnISJWhn1k?width=2400",
+            "stylesheet": "https://webchat-styler-css.botpress.app/prod/code/bc625821-1a34-471f-a4e4-5998e6aa5597/v76239/style.css",
+            "frontendVersion": "v1",
+            "useSessionStorage": true,
+            "enableConversationDeletion": true,
+            "theme": "prism",
+            "themeColor": "#2563eb",
+            "allowedOrigins": [],
+        });
+    </script>
     <script src="bot_navigation.js"></script>
     <script src="bot_status.js"></script>
-    <script src="https://mediafiles.botpress.cloud/3865d6df-cf99-43a6-ad8c-ba37c8f36695/webchat/config.js" defer></script>
+    <!-- <script src="https://mediafiles.botpress.cloud/3865d6df-cf99-43a6-ad8c-ba37c8f36695/webchat/config.js" defer></script> -->
     <script src="https://kit.fontawesome.com/031ad05086.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script></body>
