small changes (nav)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="row justify-content-start">
                 <!-- Home Button -->
                 <div class="col-auto">
-                    <button class="btn btn-dark align-content-center btnn"  type="button" onclick="navigateTo('/index.html')">
+                    <button class="btn btn-dark align-content-center btnn"  type="button" onclick="navigateTo('index.html')">
                         <div class="container text-center mx-2">
                             <div class="row">
                                 <div class="col-2">
