small css changes

--- a/analysis-page.html
+++ b/analysis-page.html
@@ -10,12 +10,12 @@
     <!-- <script src="bot_navigation.js"></script> -->
 </head>
 <body>
-    <div class="card py-2 cardColor">
+    <header class="card py-2 cardColor">
         <div class=" my-1 mx-2">
             <img src="qs-logo-header.png" class="img-size">
             <button class="settingsButton"><i class='fas fa-cog' style='font-size:36px'></i></i></button>
         </div>
-    </div>
+    </header>
 
     <div class="card cardColor">
         <div class="container my-3 ms-1">
