Some analysis page setup nothing crazy

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                             </div>
                         </button>
                         <ul class="dropdown-menu">
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis-page.html')">Pistachio Bot</button></li>
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis-page.html')">Elli Bot</button></li>
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis-page.html')">Study Guide Bot</button></li>
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis-page.html')">Destination Guide Bot</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_pistachiobot.html')">Pistachio Bot</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_ellibot.html')">Elli Bot</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_studyguidebot.html')">Study Guide Bot</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_destinationguidebot.html')">Destination Guide Bot</button></li>
                         </ul>
                     </div>
                 </div>
