--- a/junk_code/analysis-page.html
+++ b/junk_code/analysis-page.html
@@ -62,8 +62,39 @@
         </div>
     </div>
     </div>
-    <div class="card">
-        Nothing yet..
+    <div class="card cardColor mx-3 my-3 p-3">
+        <div class="row">
+            <div class="col-3">
+                <ul class="nav nav-pills flex-column">
+                    <li class="nav-item">
+                        <button class="nav-link active" id="study-matrix-tab">Study Matrix</button>
+                    </li>
+                    <li class="nav-item mt-2">
+                        <button class="nav-link" id="destination-matrix-tab"> Destination Matrix</button>
+                    </li>
+                </ul>
+            </div>
+
+          
+            <div class="col-9">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h4>Analytics: </h4>
+                    <div class="d-flex align-items-center">
+                        <span class="me-3">Live Version: Example Bot ID</span>
+                        <span class="me-3">Latest Released Version: Example Bot ID</span>
+                        <div id="study-guide-status-circle" class="status-circle col-3">
+                            <span class=" p-3 bg-success border border-light rounded-circle">
+                                <span class="visually-hidden">Status Indicator</span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div id="matrix-content">
+                    
+                </div>
+            </div>
+        </div>
     </div>
     <div class="card py-2 cardColor">
         <div class="container my-4">
