--- a/index.html
+++ b/index.html
@@ -136,6 +136,22 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="col-4">
+                                            <div class="row">
+                                                <div class="col-1">
+                                                    <div id="blackBadge" class="redB">
+                                                        <span class="position-absolute p-2 bg-white border border-medium rounded-circle">
+                                                            <span class="visually-hidden">New alerts</span>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                                <div class="col-10">
+                                                    NO DATA
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -181,7 +197,7 @@
                                                         <img src="Lead-gen-bot-pic.png" class="img-bot">
                                                     </div>
                                                     <div class="col-9 align-content-center">
-                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/a4acca45-aa89-4340-996f-e12b79cb2ab9/overview">PISTACHIO BOT</a></<h2>
+                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/a4acca45-aa89-4340-996f-e12b79cb2ab9/overview">PISTACHIO BOT</a><h2>
                                                     </div>
                                                 </div>
                                             </div>
@@ -211,7 +227,7 @@
                                                         <img src="Lead-gen-bot-pic.png" class="img-bot">
                                                     </div>
                                                     <div class="col-9 align-content-center">
-                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/a4acca45-aa89-4340-996f-e12b79cb2ab9/overview">STUDY GUIDE</a></<h2>
+                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/a4acca45-aa89-4340-996f-e12b79cb2ab9/overview">STUDY GUIDE</a><h2>
                                                     </div>
                                                 </div>
                                             </div>
@@ -241,7 +257,7 @@
                                                         <img src="Lead-gen-bot-pic.png" class="img-bot">
                                                     </div>
                                                     <div class="col-9 align-content-center">
-                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/a4acca45-aa89-4340-996f-e12b79cb2ab9/overview">Destination GUIDE</a></<h2>
+                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/a4acca45-aa89-4340-996f-e12b79cb2ab9/overview">Destination GUIDE</a><h2>
                                                     </div>
                                                 </div>
                                             </div>
