--- a/analysis_studyguidebot.html
+++ b/analysis_studyguidebot.html
@@ -107,11 +107,11 @@
             </div>
         </div>
     </div>
-    <div class="card py-2 cardColor">
-        <div class="container my-4">
+    <footer class="card cardColor">
+        <div class="container">
             
         </div>
-    </div>
+    </footer>
 
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
     <script>
