json data from elli & pistachio bot, displaying result in website

--- a/analysis_ellibot.html
+++ b/analysis_ellibot.html
@@ -109,7 +109,7 @@
                 <!-- Main Content Area -->
                 <div class="col-9">
                     <div id="matrix-content" class="border rounded p-3">
-                        
+                        <ul id="elliUser"></ul>
                     </div>
                 </div>
             </div>
@@ -147,6 +147,7 @@
     </script>
     <script src="bot_navigation.js"></script>
     <script src="bot_status.js"></script>
+    <script src="display_elli.js"></script>
     <!-- <script src="https://mediafiles.botpress.cloud/3865d6df-cf99-43a6-ad8c-ba37c8f36695/webchat/config.js" defer></script> -->
     <script src="https://kit.fontawesome.com/031ad05086.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
