--- a/analysis_ellibot.html
+++ b/analysis_ellibot.html
@@ -94,8 +94,22 @@
         <header class="container-fluid p-2 mb-3 bg-light border-bottom">
             <div class="row">
                 <div class="col-12 d-flex justify-content-start">
-                    <button class="btn btn-dark mx-2" id="study-matrix-tab">Study Matrix</button>
-                    <button class="btn btn-light mx-2" id="destination-matrix-tab">Destination Matrix</button>
+                    <button class="btn btn-dark mx-2" id="study-matrix-tab">Sort by date</button>
+                    <select class="form-select mx-2" style="width: auto;" id="monthSelector">
+                        <option selected>Choose a month</option>
+                        <option value="January">January</option>
+                        <option value="February">February</option>
+                        <option value="March">March</option>
+                        <option value="April">April</option>
+                        <option value="May">May</option>
+                        <option value="June">June</option>
+                        <option value="July">July</option>
+                        <option value="August">August</option>
+                        <option value="September">September</option>
+                        <option value="October">October</option>
+                        <option value="November">November</option>
+                        <option value="December">December</option>
+                    </select>
                 </div>
             </div>
         </header>
@@ -107,9 +121,21 @@
                 <div class="col-3"></div>
 
                 <!-- Main Content Area -->
-                <div class="col-9">
+                <!-- <div class="col-9">
                     <div id="matrix-content" class="border rounded p-3">
                         <ul id="elliUser"></ul>
+                    </div>
+                </div> -->
+                <div class="col-12 col-md-8 matrix-content"></div>
+                    <div id="matrix-content" class="border rounded p-3">
+                        <h2>Total New Users</h2>
+                        <div class = "circle">
+                            <div class="total-users-circle">
+                                <span id="totalUsers">0</span>
+                            </div>
+                        </div>
+                        <h2>New Users by Month</h2>
+                        <ul id="monthList" class="list-unstyled"></ul>
                     </div>
                 </div>
             </div>
