--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                             <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_ellibot.html')">Elli Bot</button></li>
                             <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_studyguidebot.html')">Study Guide Bot</button></li>
                             <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_destinationguidebot.html')">Destination Guide Bot</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_rankingsupportbot.html')">QS Ranking Support Bot</button></li>
                         </ul>
                     </div>
                 </div>
@@ -277,6 +278,36 @@
                                     </div>
                                 </div>
                             </div> 
+                            <div class="col-12">
+                                <div class="card mx-2 my-2 borderColor">
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-6 d-flex align-items-stretch justify-content-center">
+                                                <div class="row">
+                                                    <div class="col-3 align-content-center">
+                                                        <img src="Lead-gen-bot-pic.png" class="img-bot">
+                                                    </div>
+                                                    <div class="col-9 align-content-center">
+                                                        <h2><a class="no-link" href="">QS Ranking Support Bot</a><h2>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-6 align-items-stretch justify-content-center">
+                                                <div class="row">
+                                                    <div class="col-9 ">
+                                                        <p id="ranking-support-data">Loading...</p>
+                                                    </div>
+                                                    <div id="ranking-support-status-circle" class="status-circle col-3">
+                                                        <span class=" p-3 bg-success border border-light rounded-circle">
+                                                            <span class="visually-hidden">Status Indicator</span>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </ul>
                 </div>
