--- a/analysis_studyguidebot.html
+++ b/analysis_studyguidebot.html
@@ -56,6 +56,7 @@
                             <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_ellibot.html')">Elli Bot</button></li>
                             <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_studyguidebot.html')">Study Guide Bot</button></li>
                             <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_destinationguidebot.html')">Destination Guide Bot</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_rankingsupportbot.html')">QS Ranking Support Bot</button></li>
                         </ul>
                     </div>
                 </div>
